--- a/DevDataProd_Project/index.Rmd
+++ b/DevDataProd_Project/index.Rmd
@@ -20,16 +20,6 @@ MPG is the abbreviation of miles per (US) gallon, which is the indicator of the 
 
 --- .class #id
 
-## Method: Random Forest
-
-We choose the method of random forest to build the predicting model.
-
-Random forests are an ensemble learning method for classification, regression and other tasks, that operate by constructing a multitude of decision trees at training time and outputting the class that is the mode of the classes (classification) or mean prediction (regression) of the individual trees. 
-
-Random forests correct for decision trees' habit of overfitting to their training set.(From [Random forest-Wiki](https://en.wikipedia.org/wiki/Random_forest))
-
---- .class #id
-
 ## Dataset from R Package: mtcars
 
 ```mtcars``` is a classical dataset provided in the R package {datasets}. It contains data of different kinds of cars and we can train a model with the data conveniently. Particularly, in mtcars, "wt" means weight, and "am" means transmission(auto-matic/manual), which are the two main predictors in the model.
@@ -41,14 +31,19 @@ str(mtcars)
 
 --- .class #id
 
-## Model for Prediction
+## Building the Model
 
-We train the model, considering that there is interaction between weight and transmission. The summary of the model is below.
-```{r,echo=FALSE}
-library(caret)
-fit <- train(mpg ~ wt * factor(am), data = mtcars)
-fit
-```
+### Method: Random Forest
+
+We choose the method of random forest to build the predicting model.
+
+Random forests are an ensemble learning method for classification, regression and other tasks, that operate by constructing a multitude of decision trees at training time and outputting the class that is the mode of the classes (classification) or mean prediction (regression) of the individual trees. 
+
+Random forests correct for decision trees' habit of overfitting to their training set.(From [Random forest-Wiki](https://en.wikipedia.org/wiki/Random_forest))
+
+### Model: Interaction between weight and transmission
+
+We train the model, considering that there is interaction between weight and transmission. 
 
 --- .class #id
 
